test/src/e2e_vm_tests/test_programs/should_fail/recover_at_level_top/src/main.sw
script;

random_words

f9


fn good1() {

}

fn a

fn main() {
    good1();
}
